--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomofocus</title>
-    <link
+    <!--   <link
       href="https://www.dafontfree.net/embed/YXJpYWwtcm91bmRlZC1yZWd1bGFyJmRhdGEvMS9hLzIwL3VuaWNvZGUuYXJpYWxyLnR0Zg"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
