--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     /> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v0.1" />
   </head>
   <body>
     <header>
